issue-17: Retrieve bot guild scoped config sample